fixed jump animation / player collision && map limit

--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -68,7 +68,7 @@
      width : 76px;
      background: url('/assets/textures/saut.png');
      transform: scaleX(-1);
-     animation : doubleJump 1s steps(9) infinite;
+     animation : doubleJump 1s steps(9) forwards;
  }
 
  .jumpDown {
